--- a/pyq.html
+++ b/pyq.html
@@ -15,7 +15,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      <meta name="keyword" content="Download Jamia Previous Year Entrance Question Papers Pdf-2023-ssfjamia">
     <meta name="description" content="Jamia Millia Islamia Previous Year Entrance Question Papers Free Pdf -2023,2022,2021,2020,.....Download Now!">
     <link rel="canonical" href="https://ssfjamia.in/pyq.html">
-    <title>Download 2023 jamia Entrance All Question Papers Free Pdf|JMI PYQ-ssfjamia </title>
+    <title>Download 2023 Jamia Entrance All Question Papers Free Pdf|JMI PYQ-ssfjamia </title>
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1262763224533830"
      crossorigin="anonymous"></script>
