--- a/class11thScience.html
+++ b/class11thScience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jamia school 11th science previous year entrance question paper</title>
+    <title>Jamia school 11th science previous year entrance question paper</title>
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
