--- a/pyq.html
+++ b/pyq.html
@@ -437,7 +437,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <td><a href="PhD.html">PhD</a></td>
               <td><a href="PhD.html">Click Here</a></td>
               
-            </tr>        
+            </tr>     
+              <tr>
+              <td><a href="CODE.html">CDOE</a></td>
+              <td><a href="CODE.html">Click Here</a></td>
+              
+            </tr> 	
               <tr>
                 <td><a href="rca.html">RCA</a></td>
                 <td><a href="rca.html">Click Here</a></td>
