--- a/pyq.html
+++ b/pyq.html
@@ -439,8 +439,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
             </tr>     
               <tr>
-              <td><a href="CODE.html">CDOE</a></td>
-              <td><a href="CODE.html">Click Here</a></td>
+              <td><a href="CDOE.html">CDOE</a></td>
+              <td><a href="CDOE.html">Click Here</a></td>
               
             </tr> 	
               <tr>
