--- a/CDOE.html
+++ b/CDOE.html
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <button type="button" class="collapsible" >M95 MBA </button>
                   <div class="content">
                     <ul>
-                      <li><a href="https://drive.google.com/file/d/18JEZxyjCx1-uNZEOXCt8y0qyh9WHl_hx/view?usp=drive_link">MBA Distance Entrance Question 2024</a></li>
+                      <li><a href="https://drive.google.com/file/d/18JEZxyjCx1-uNZEOXCt8y0qyh9WHl_hx/view?usp=drive_link">MBA Distance 2024</a></li>
                       
                    </ul>
                   </div>
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <button type="button" class="collapsible" >M99 B.Ed </button>
                     <div class="content">
                       <ul>
-                        <li><a href="https://drive.google.com/file/d/19UBgD13O5tUmwlw-UhcZy-G6TKIxdBuB/view?usp=drive_link">B.Ed Distance Entrance Question 2024</a></li>
+                        <li><a href="https://drive.google.com/file/d/19UBgD13O5tUmwlw-UhcZy-G6TKIxdBuB/view?usp=drive_link">B.Ed Distance 2024</a></li>
                         
                      </ul>
                     </div>
