--- a/CDOE.html
+++ b/CDOE.html
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keyword" content="Jamia Diploma in Engineering |D.El.Ed (Urdu/Hindi)| Unani Pharmacy">
     <meta name="description" content="jamia previous year entrance question Papers-Jamia Diploma in Engineering|D.El.Ed (Urdu/Hindi)|Diploma in Unani Pharmacy">
     <link rel="canonical" href="https://ssfjamia.in/Diploma.html">
-    <title>Download Jamia(JMI) Diploma in Engineering Previous Entrance Question Papers</title>
+    <title>Download 2024 Jamia(JMI) Distance Entrance Question Papers </title>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1262763224533830"
      crossorigin="anonymous"></script>
