--- a/CDOE.html
+++ b/CDOE.html
@@ -15,7 +15,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="keyword" content="Jamia Diploma in Engineering |D.El.Ed (Urdu/Hindi)| Unani Pharmacy">
-    <meta name="description" content="jamia previous year entrance question Papers-Jamia Diploma in Engineering|D.El.Ed (Urdu/Hindi)|Diploma in Unani Pharmacy">
+    <meta name="description" content="jamia previous year entrance question Papers-Jamia Distance 2024|MBA & B.Ed">
     <link rel="canonical" href="https://ssfjamia.in/Diploma.html">
     <title>Download 2024 Jamia(JMI) Distance Entrance Question Papers </title>
   
