--- a/CDOE.html
+++ b/CDOE.html
@@ -14,9 +14,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="keyword" content="Jamia Diploma in Engineering |D.El.Ed (Urdu/Hindi)| Unani Pharmacy">
+
+  
     <meta name="description" content="jamia previous year entrance question Papers-Jamia Distance 2024|MBA & B.Ed">
-    <link rel="canonical" href="https://ssfjamia.in/Diploma.html">
+    <link rel="canonical" href="https://ssfjamia.in/CDOE.html">
     <title>Download 2024 Jamia(JMI) Distance Entrance Question Papers </title>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1262763224533830"
