--- a/postgraduationpyq.html
+++ b/postgraduationpyq.html
@@ -578,7 +578,9 @@
                                           <div class="content">
                                               <ul>
                                                  <li><a href="https://drive.google.com/file/d/1IZOpMPXWdlKwvn8gPMYOIDCQl_shbuPz/view?usp=drive_link">M.Ed Question Paper 2023</a></li>
+                                                 <li><a href="https://drive.google.com/file/d/1tA7ntqfnHI4dkXWnHXSUGII1e1XWmGaT/view?usp=drive_link">M.Ed Question Paper 2022</a></li>
                                                  <li><a href="https://drive.google.com/file/d/1k_KbkezKGHxOSHaMUn-LFP-81jFchT09/view?usp=drive_link">M.Ed Question Paper 2021</a></li>
+                                                 <li><a href="https://drive.google.com/file/d/1iCJbYJ3V7y2BCKxFHt_KkhudORJjwAra/view?usp=drive_link">M.Ed Question Paper 2020</a></li>
                                                  <li><a href="https://drive.google.com/file/d/1WVmA6Bdpctp4WJEky4z3RB9wKNEfr57I/view?usp=drive_link">M.Ed Question Paper 2019</a></li>
                                                  <li><a href="https://drive.google.com/file/d/13uLqulBlQq4MSBnC9rmTBSqQwL9uqK66/view?usp=drive_link">M.Ed Question Paper 2018</a></li>
                                                  <li><a href="https://drive.google.com/file/d/1F5JAUdD3eHx1Bj_jck2-CNnqGui27Tk8/view?usp=drive_link">M.Ed Question Paper 2017</a></li>
