--- a/Diploma.html
+++ b/Diploma.html
@@ -178,6 +178,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </div>
               </td>
             </tr>  
+              <tr>
+              <td>
+                  <button type="button" class="collapsible" >D05 Diploma in Modern Arabic Language & Translation </button>
+                  <div class="content">
+                    <ul>
+                      <li><a href="https://drive.google.com/file/d/1vLnspQrda9voJsag2Z36RO_FtyePi1fR/view?usp=drive_link">Diploma in Modern Arabic Language & Translation Question Paper 2024</a></li>
+                      <li><a href="https://drive.google.com/file/d/1xp7Lmknc7JxBY78dSCgxq7PbDOg3JjeM/view?usp=drive_link">Diploma in Modern Arabic Language & Translation Question Paper 2018</a></li>
+                      <li><a href="https://drive.google.com/file/d/1TVYTBlSSs1KC8q_vlh-W42VmQjgxLTTk/view?usp=drive_link">Diploma in Modern Arabic Language & Translation Question Paper 2017</a></li>
+                      <li><a href="https://drive.google.com/file/d/177Dz35NXd88et_cqmlJG8Gjo91zQL8KR/view?usp=drive_link">Diploma in Modern Arabic Language & Translation Question Paper 2016</a></li>
+                   
+                      
+                   </ul>
+                  </div>
+              </td>
+            </tr> 
           </table> 
 
         </div>
