--- a/Class6th.html
+++ b/Class6th.html
@@ -173,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
     <section>
-        <h2>Entrance Test Cut Off(2023):</h2>
+        <h2>Entrance Test Cut Off(2024):</h2>
         <br>
         <h4>Syed Abid Husain Sr.Secondary School(S/F)</h4>
 
@@ -199,27 +199,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <tr>
             <td>3</td>
             <td>Muslim OBC/ST</td>
-            <td>90.00</td>
+            <td>91.00</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Muslim Women</td>
-            <td>90.00</td>
+            <td>91.00</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>PWD/PD-Blindness/low</td>
-            <td>73.00</td>
+            <td>PWD</td>
+            <td>77.00</td>
         </tr>
         <tr>
             <td>6</td>
             <td>JK</td>
-            <td>85.00</td>
+            <td>76.00</td>
         </tr>
         <tr>
             <td>7</td>
             <td>KM</td>
-            <td>73.00</td>
+            <td>54.00</td>
         </tr>
       
     </tbody>
@@ -228,6 +228,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Add more content as needed -->
     </section>
+
+    <section id="questions" class="pdf-section">
+        <h2>JMI 6th Class Previous Question Paper 2024</h2>
+      <br>
+        <a href="https://drive.google.com/file/d/1BK0ACNPDr4Iz7zzbvIaUTRfM9G5VhCMD/view?usp=drive_link" class="download-button">Download</a>
+    </section>
+    <br>
 
     <section id="questions" class="pdf-section">
         <h2>JMI 6th Class Previous Question Paper 2023</h2>
