--- a/Class9th.html
+++ b/Class9th.html
@@ -189,27 +189,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <tr>
             <td>1</td>
             <td>General</td>
-            <td>87.00</td>
+            <td>89.00</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Muslim</td>
-            <td>86.00</td>
+            <td>87.00</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Muslim OBC/ST</td>
-            <td>85.00</td>
+            <td>86.00</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Muslim Women</td>
-            <td>85.00</td>
+            <td>83.00</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>PWD/PD-Blindness/low</td>
-            <td>56.00</td>
+            <td>PWD</td>
+            <td>51.00</td>
         </tr>
         <tr>
             <td>6</td>
@@ -219,7 +219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <tr>
             <td>7</td>
             <td>KM</td>
-            <td>43.00</td>
+            <td>49.00</td>
         </tr>
       
     </tbody>
@@ -238,32 +238,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <tr>
                 <td>1</td>
                 <td>General</td>
-                <td>92.00</td>
+                <td>93.00</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Muslim</td>
-                <td>91.00</td>
+                <td>92.00</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Muslim OBC/ST</td>
-                <td>90.00</td>
+                <td>92.00</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Muslim Women</td>
-                <td>89.00</td>
+                <td>90.00</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>PWD/PD</td>
-                <td>64.00</td>
+                <td>72.00</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>JK</td>
-                <td>80.00</td>
+                <td>83.00</td>
             </tr>
             <tr>
                 <td>7</td>
@@ -292,32 +292,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <tr>
                 <td>2</td>
                 <td>Muslim</td>
-                <td>77.00</td>
+                <td>76.00</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Muslim OBC/ST</td>
-                <td>74.00</td>
+                <td>73.00</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Muslim Women</td>
-                <td>76.00</td>
+                <td>75.00</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>PWD/PD</td>
-                <td>52.00</td>
+                <td>36.00</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>JK</td>
-                <td>70.00</td>
+                <td>74.00</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>KM</td>
-                <td>40.00</td>
+                <td>34.00</td>
             </tr>
           
         </tbody>
@@ -327,6 +327,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Add more content as needed -->
     </section>
+
+    <section id="questions" class="pdf-section">
+        <h2>JMI 9th Class Previous Question Paper 2024</h2>
+      <br>
+        <a href="https://drive.google.com/file/d/1GiMFgf_0i4jsKbFZFvzce5JiCfZoT8la/view?usp=drive_link" class="download-button">Download</a>
+    </section>
+    <br>
 
     <section id="questions" class="pdf-section">
         <h2>JMI 9th Class Previous Question Paper 2023</h2>
