--- a/class11thScience.html
+++ b/class11thScience.html
@@ -187,37 +187,42 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <tr>
             <td>1</td>
             <td>General</td>
-            <td>82.00</td>
+            <td>85.00</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Muslim</td>
-            <td>82.00</td>
+            <td>85.00</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Muslim OBC/ST</td>
-            <td>82.00</td>
+            <td>84.00</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Muslim Women</td>
-            <td>78.00</td>
+            <td>84.00</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>PWD/PD-Blindness/low</td>
-            <td>69.00</td>
+            <td>PWD/PD-Locomotor</td>
+            <td>56.00</td>
+        </tr>
+         <tr>
+            <td>5</td>
+            <td>PWD/PD-Haemophilia</td>
+            <td>60.00</td>
         </tr>
         <tr>
             <td>6</td>
             <td>JK</td>
-            <td>70.00</td>
+            <td>81.00</td>
         </tr>
         <tr>
             <td>7</td>
             <td>KM</td>
-            <td>59.00</td>
+            <td>57.00</td>
         </tr>
       
     </tbody>
@@ -285,22 +290,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <tr>
                 <td>1</td>
                 <td>General</td>
-                <td>77.00</td>
+                <td>83.00</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Muslim</td>
-                <td>75.00</td>
+                <td>83.00</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Muslim OBC/ST</td>
-                <td>74.00</td>
+                <td>82.00</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Muslim Women</td>
-                <td>74.00</td>
+                <td>82.00</td>
             </tr>
             <tr>
                 <td>5</td>
@@ -310,12 +315,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <tr>
                 <td>6</td>
                 <td>JK</td>
-                <td>69.00</td>
+                <td>77.00</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>KM</td>
-                <td>41.00</td>
+                <td>55.00</td>
             </tr>
           
         </tbody>
@@ -325,6 +330,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Add more content as needed -->
     </section>
+
+    <section id="questions" class="pdf-section">
+        <h2>JMI Class 11th Science Question Paper 2024</h2>
+      <br>
+        <a href="https://drive.google.com/file/d/1xQVuHoVxMeSA83eChOS4kDLy-L5wzEaz/view?usp=drive_link" class="download-button">Download</a>
+    </section>
+    <br>
 
     <section id="questions" class="pdf-section">
         <h2>JMI Class 11th Science Question Paper 2023</h2>
