--- a/Class11thArts.html
+++ b/Class11thArts.html
@@ -327,6 +327,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Add more content as needed -->
     </section>
 
+     <section id="questions" class="pdf-section">
+        <h2>JMI Class 11th Arts Question Paper 2024</h2>
+      <br>
+        <a href="https://drive.google.com/file/d/13qTeSOHih0qwyf0cWoR_mwghfaSZc17q/view?usp=drive_link" class="download-button">Download</a>
+    </section>
+    <br>
     <section id="questions" class="pdf-section">
         <h2>JMI Class 11th Arts Question Paper 2023</h2>
       <br>
