--- a/class11thCommerce.html
+++ b/class11thCommerce.html
@@ -327,6 +327,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
     <section id="questions" class="pdf-section">
+        <h2>JMI Class 11th Commerce Question Paper 2024</h2>
+      <br>
+        <a href="https://drive.google.com/file/d/1G8v7eJX9M4uu6NOdqHuAcyXN8NMWtzxn/view?usp=drive_link" class="download-button">Download</a>
+    </section>
+    <br>
+    <section id="questions" class="pdf-section">
         <h2>JMI Class 11th Commerce Question Paper 2023</h2>
       <br>
         <a href="ssfjamia/ssf school_Entrance/School Entrance_SSF JMI/Class 11/Commerce/11th Commerce 2023_SSF JMI.pdf" class="download-button">Download</a>
