--- a/schoolpyq.html
+++ b/schoolpyq.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    <meta name="keyword" content="JMI(School) Previous Year Entrance Papers For 11th Class,9th Class,6th Class">
     <meta name="description" content="Jamia School Previous Year Entrance Question Papers Free Pdf -11th Science,11th Commerce,11th Arts,9th class,6th class.....Download Now!">
     <link rel="canonical" href="https://ssfjamia.in/schoolpyq.html">
-    <title>Download 2023 jamia School Entrance Question Papers Pdf </title>
+    <title>Download 2024 jamia School Entrance Question Papers Free Pdf </title>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1262763224533830"
      crossorigin="anonymous"></script>
