--- a/pyq.html
+++ b/pyq.html
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </table>
          </div>
           <br><br>
-		<button class="feedback-btn" onclick="window.location.href=''">Send Feedback</button>
+		<button class="feedback-btn" onclick="window.location.href='https://forms.gle/KfL3LhQ8DzDK3U74A'">Send Feedback</button>
           <br><br>
        </div>
        
