--- a/pyq.html
+++ b/pyq.html
@@ -417,9 +417,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           </div>
 
-	   <div style="padding: 6px;">
-            <h4>Jamia Millia Islamia Previous Year Entrance Question Papers Free PDF Download here</h4>
-          </div>	
+	  <div style="background-color: #eaf2fa; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+      <h4 style="margin: 0; font-size: 20px; color: #0b2239; text-align: center;">Jamia Millia Islamia Previous Year Entrance Question Papers Free PDF Download Here</h4>
+    </div>	
       
          <div style="padding: 6px;">
                 <table class="table">
